test/corpus/file/staged.txt
====================
Modified
====================

1 M. N... 100644 100644 100644 7e91309a52661f885486ad07ef010c7246b81349 7e91309a52661f885486ad07ef010c7246b81349 test/corpus/file.txt

---

(source_file
	(file
		(staged	(modified)) (unstaged) (submodule) 	(modes (mHEAD) (mIndex) (mWorktree))
																								(hashes (hHEAD) (hIndex))
																								(path)))


====================
Added
====================

1 A. N... 100644 100644 100644 7e91309a52661f885486ad07ef010c7246b81349 7e91309a52661f885486ad07ef010c7246b81349 test/corpus/file.txt

---

(source_file
	(file
		(staged	(added)) (unstaged) (submodule) 	(modes (mHEAD) (mIndex) (mWorktree))
																								(hashes (hHEAD) (hIndex))
																								(path)))


====================
Deleted
====================

1 D. N... 100644 100644 100644 7e91309a52661f885486ad07ef010c7246b81349 7e91309a52661f885486ad07ef010c7246b81349 test/corpus/file.txt

---

(source_file
	(file
		(staged	(deleted)) (unstaged) (submodule) 	(modes (mHEAD) (mIndex) (mWorktree))
																								(hashes (hHEAD) (hIndex))
																								(path)))
